# skills

./: .editorconfig  .gitignore  CHANGELOG.md  OPENCODE_PR_README.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sync-to-opencode.sh
.github/workflows/: auto-correct-ci.yml  auto-correct-on-failure.yml  opencode-integration.yml  skill-validation.yml  validate-skills.yml
architect/: README.md  SKILL.md
architect/knowledge/: creating-skills.md
architect/references/: output-patterns.md  platform-sync.md  skill-creator.md  workflows.md
architect/scripts/: activate_all.py  init_skill.py  package_skill.py  (+5 more)
bootstrap/: README.md
code-review/: .code-review.yml  SKILL.md
core/: auto_skill_loader.py  start_auto_skill_loader.sh
dataset-structure/: SKILL.md
dev-workflow/: README.md  SKILL.md
diagram/: README.md  SKILL.md
docs/: creating-skills.md
docx/: README.md  SKILL.md
latex/: README.md  SKILL.md
mcp-builder/: README.md  SKILL.md
oncomets-mil-loss-lab/: README.md  SKILL.md
opencode-integration-manager/: README.md  __init__.py
orchestrator/: SKILL.md
pdf/: README.md  SKILL.md
recursive-context/: README.md  SKILL.md
scripts/: __init__.py  init_skill.py  package_skill.py  post-clone-setup.sh  quick_validate.py  sync-skills.sh  validate-skill-on-change.sh  validate_skill_on_change.sh
shared/: .gitignore  LICENSE  requirements.txt
sys-env/: README.md  SKILL.md
test-skill/: SKILL.md
types/: config-modified.ts  proactive-loader.ts  session-modified.ts
web-scraper/: SKILL.md
xlsx/: README.md  SKILL.md
(+163 files in other folders)
