[project]
name = "skills"
version = "0.1.0"
description = "Reusable skills and agents for AI coding assistants"
requires-python = ">=3.12"
authors = ["Your Name <your-email@example.com>"]
license = "MIT"
readme = "README.md"

dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.ruff]
cache-dir = ".ruff_cache"
